[package]
name = "json-test"
version = "0.1.0"
authors = ["whatasoda <git@whatasoda.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"

[dependencies.rustbreak]
version = "2.0.0"
features = ["bin_enc"]
